--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Hello World</h1>
         <p>I'm hosted with Github Page.</p>
+        <p>It's good</p>
     </body>
 </html>
